--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+    </parent>
     <name>Jasig Central Authentication Service Add Ons</name>
 	<description>A collection of useful Jasig CAS SSO Server add ons and extensions</description>
     <groupId>net.unicon.cas</groupId>
@@ -10,6 +15,12 @@
     <version>0.1</version>
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
+	<inceptionYear>2012</inceptionYear>
+	
+	<organization>
+	        <name>Unicon, inc.</name>
+	        <url>http://unicon.net</url>
+	    </organization>
 
 	<licenses>
 		<license>
@@ -22,7 +33,26 @@
 	    <connection>scm:git:git@github.com:Unicon/cas-addons.git</connection>
 	    <developerConnection>scm:git:git@github.com:Unicon/cas-addons.git</developerConnection>
 	    <url>https://github.com/Unicon/cas-addons</url>
+		<tag>master</tag>
 	 </scm>
+	
+	 <issueManagement>
+	 	<url>https://github.com/Unicon/cas-addons/issues</url>
+	    <system>Github</system>
+	 </issueManagement>
+	
+	 <developers>
+	        <developer>
+	            <id>dima767</id>
+	            <name>Dmitriy Kopylenko</name>
+	            <email>dkopylenko@unicon.net</email>
+	            <organization>Unicon, inc.</organization>
+	            <organizationUrl>http://unicon.net</organizationUrl>
+	            <roles>
+	                <role>Developer</role>
+	            </roles>
+	        </developer>	        
+	    </developers>
     
     <properties>        
         <cas.version>3.4.11</cas.version>
@@ -31,6 +61,58 @@
 		<junit.version>4.10</junit.version>
         <jackson.version>1.9.2</jackson.version>
     </properties>
+
+	<build>
+			<testResources>
+				<testResource>
+					<directory>${basedir}/src/test/resources</directory>
+				</testResource>
+			</testResources>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<configuration>
+						<includes>
+							<include>**/*Tests.java</include>
+						</includes>
+						<excludes>
+							<exclude>**/Abstract*.java</exclude>
+						</excludes>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>1.6</source>
+						<target>1.6</target>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<configuration>
+						<archive>
+							<manifest>
+								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+							</manifest>
+						</archive>
+					</configuration>
+				</plugin>
+
+	            <plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-release-plugin</artifactId>
+						<version>2.1</version>
+						<configuration>
+							<mavenExecutorId>forked-path</mavenExecutorId>
+							<useReleaseProfile>false</useReleaseProfile>
+							<arguments>-Psonatype-oss-release</arguments>
+						</configuration>
+					</plugin>	            
+			</plugins>
+		</build>
     
 	<dependencies>        
 
