--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,24 @@
 				</testResource>
 			</testResources>
 			<plugins>
+				  <plugin>
+				  	<groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-compiler-plugin</artifactId>
+				    <version>2.5.1</version>
+				    <configuration>
+				      <source>1.6</source>
+					  <target>1.6</target>
+				      <compilerId>groovy-eclipse-compiler</compilerId>
+				      <verbose>true</verbose>
+				    </configuration>
+				    <dependencies>
+				      <dependency>
+				        <groupId>org.codehaus.groovy</groupId>
+				        <artifactId>groovy-eclipse-compiler</artifactId>
+				        <version>2.6.0-01</version>
+				      </dependency>
+				    </dependencies>
+				  </plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
@@ -77,14 +95,6 @@
 						<excludes>
 							<exclude>**/Abstract*.java</exclude>
 						</excludes>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<configuration>
-						<source>1.6</source>
-						<target>1.6</target>
 					</configuration>
 				</plugin>
 				<plugin>
