--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
 		<servlet.version>2.5</servlet.version>
 		<junit.version>4.10</junit.version>
         <jackson.version>1.9.2</jackson.version>
+        <commons-codec.version>1.6</commons-codec.version>
     </properties>
 
 	<build>
@@ -140,6 +141,12 @@
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons-codec.version}</version>
         </dependency>
 
         <dependency>
