--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
         <jackson.version>2.0.4</jackson.version>
         <commons-codec.version>1.6</commons-codec.version>
         <person.directory.version>1.5.0-RC6</person.directory.version>
+        <shiro.version>1.2.0</shiro.version>
     </properties>
 
     <build>
@@ -161,6 +162,12 @@
                     <artifactId>commons-logging</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>${shiro.version}</version>
         </dependency>
 
         <dependency>
