--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
     </developers>
 
     <properties>
-        <cas.version>3.5.0-RC2</cas.version>
+        <cas.version>3.5.0</cas.version>
         <cas.client.version>3.2.1</cas.client.version>
         <groovy.version>2.0.0</groovy.version>
         <servlet.version>2.5</servlet.version>
