--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,13 @@
         <groovy.version>2.0.0</groovy.version>
         <servlet.version>2.5</servlet.version>
         <junit.version>4.10</junit.version>
-        <jackson.version>2.0.4</jackson.version>
+        <jackson.version>1.9.8</jackson.version>
         <commons-codec.version>1.6</commons-codec.version>
         <person.directory.version>1.5.0-RC6</person.directory.version>
         <shiro.version>1.2.0</shiro.version>
+        <spring.version>3.1.1.RELEASE</spring.version>
+        <httpclient.version>4.2.1</httpclient.version>
+        <slf4j.version>1.6.6</slf4j.version>
     </properties>
 
     <build>
@@ -92,6 +95,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12</version>
                 <configuration>
                     <includes>
                         <include>**/*Tests.java</include>
@@ -104,6 +108,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -116,7 +121,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.1</version>
                 <configuration>
                     <mavenExecutorId>forked-path</mavenExecutorId>
                     <useReleaseProfile>false</useReleaseProfile>
@@ -140,12 +144,18 @@
             <version>${groovy.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
+		<dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
             <version>${jackson.version}</version>
         </dependency>
-
+        
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+       
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
@@ -189,6 +199,40 @@
         	<artifactId>cas-client-core</artifactId>
         	<version>${cas.client.version}</version>
         </dependency>
+        
+        <dependency>
+        	<groupId>org.springframework</groupId>
+        	<artifactId>spring-web</artifactId>
+        	<version>${spring.version}</version>
+        </dependency>
+        
+        <dependency>
+		   <groupId>org.apache.httpcomponents</groupId>
+		   <artifactId>httpclient</artifactId>
+		   <version>${httpclient.version}</version>
+		</dependency>
+
+	 	<dependency>
+	      <groupId>org.slf4j</groupId>
+	      <artifactId>slf4j-api</artifactId>
+	      <version>${slf4j.version}</version>
+	      <scope>compile</scope>
+	    </dependency>
+	
+	    <dependency>
+	      <groupId>org.slf4j</groupId>
+	      <artifactId>slf4j-log4j12</artifactId>
+	      <version>${slf4j.version}</version>
+	      <scope>runtime</scope>
+	    </dependency>
+	
+	    <dependency>
+	      <groupId>org.slf4j</groupId>
+	      <artifactId>jcl-over-slf4j</artifactId>
+	      <version>${slf4j.version}</version>
+	      <scope>runtime</scope>
+	    </dependency>
+    
     </dependencies>
 
 
