--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
         <groovy.version>2.0.0</groovy.version>
         <servlet.version>2.5</servlet.version>
         <junit.version>4.10</junit.version>
-        <jackson.version>1.9.8</jackson.version>
+        <jackson.version>2.0.4</jackson.version>
         <commons-codec.version>1.6</commons-codec.version>
         <person.directory.version>1.5.0-RC6</person.directory.version>
         <shiro.version>1.2.0</shiro.version>
@@ -194,17 +194,11 @@
         </dependency>
 
 		<dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
-        
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-core-asl</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-       
+               
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
@@ -249,17 +243,13 @@
         	<version>${cas.client.version}</version>
         </dependency>
         
-        <dependency>
-        	<groupId>org.springframework</groupId>
-        	<artifactId>spring-web</artifactId>
-        	<version>${spring.version}</version>
-        </dependency>
-        
-        <dependency>
-		   <groupId>org.apache.httpcomponents</groupId>
-		   <artifactId>httpclient</artifactId>
-		   <version>${httpclient.version}</version>
+		<dependency>
+		    <groupId>com.sun.jersey</groupId>
+		    <artifactId>jersey-client</artifactId>
+		    <version>1.12</version>
 		</dependency>
+        
+
 
 	 	<dependency>
 	      <groupId>org.slf4j</groupId>
