--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <url>http://unicon.net</url>
     </organization>
 	
-	<url>http://unicon.github.com/cas-addons/</url>
+    <url>http://unicon.github.com/cas-addons/</url>
 	
     <licenses>
         <license>
@@ -64,16 +64,16 @@
     </developers>
 
     <properties>
-  		<github.global.server>github</github.global.server>
-
+        <github.global.server>github</github.global.server>
+        <jdk.version>1.6</jdk.version>
         <cas.version>3.5.0</cas.version>
         <cas.client.version>3.2.1</cas.client.version>
         <servlet.version>2.5</servlet.version>
         <junit.version>4.10</junit.version>
-        <jackson.version>2.0.4</jackson.version>
+        <jackson.version>2.0.5</jackson.version>
         <commons-codec.version>1.6</commons-codec.version>
         <person.directory.version>1.5.0-RC6</person.directory.version>
-        <shiro.version>1.2.0</shiro.version>
+        <shiro.version>1.2.1</shiro.version>
         <slf4j.version>1.6.6</slf4j.version>
     </properties>
  
@@ -83,6 +83,20 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>2.8.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>versions-maven-plugin</artifactId>
+          <version>1.3.1</version>
+          <reportSets>
+            <reportSet>
+              <reports>
+                <report>dependency-updates-report</report>
+                <report>plugin-updates-report</report>
+                <report>property-updates-report</report>
+              </reports>
+            </reportSet>
+          </reportSets>
         </plugin>
       </plugins>
     </reporting>
@@ -95,154 +109,152 @@
         </testResources>
         
         <plugins>
-            <plugin>
-              <groupId>com.github.github</groupId>
-              <artifactId>site-maven-plugin</artifactId>
-              <version>0.6</version>
-              <configuration>
-                <message>Creating site for ${project.version}</message>
-                <dryRun>false</dryRun>
-              </configuration>
-              <executions>
-                <execution>
-                  <goals>
-                    <goal>site</goal>
-                  </goals>
-                  <phase>site</phase>
-                </execution>
-              </executions>
-            </plugin>
+          <plugin>
+            <groupId>com.github.github</groupId>
+            <artifactId>site-maven-plugin</artifactId>
+            <version>0.7</version>
+            <configuration>
+              <message>Creating site for ${project.version}</message>
+              <dryRun>false</dryRun>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>site</goal>
+                </goals>
+                <phase>site</phase>
+              </execution>
+            </executions>
+          </plugin>
         
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <compilerId>groovy-eclipse-compiler</compilerId>
-                    <verbose>true</verbose>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.codehaus.groovy</groupId>
-                        <artifactId>groovy-eclipse-compiler</artifactId>
-                        <version>2.6.0-01</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12</version>
-                <configuration>
-                    <includes>
-                        <include>**/*Tests.java</include>
-                    </includes>
-                    <excludes>
-                        <exclude>**/Abstract*.java</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <configuration>
-                    <mavenExecutorId>forked-path</mavenExecutorId>
-                    <useReleaseProfile>false</useReleaseProfile>
-                    <arguments>-Psonatype-oss-release</arguments>
-                </configuration>
-            </plugin>
-            
-            <plugin>
+          <plugin>
               <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-javadoc-plugin</artifactId>
-              <version>2.8.1</version>
-            </plugin>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>2.5.1</version>
+              <configuration>
+                  <source>${jdk.version}</source>
+                  <target>${jdk.version}</target>
+                  <compilerId>groovy-eclipse-compiler</compilerId>
+                  <verbose>true</verbose>
+              </configuration>
+              <dependencies>
+                  <dependency>
+                      <groupId>org.codehaus.groovy</groupId>
+                      <artifactId>groovy-eclipse-compiler</artifactId>
+                      <version>2.7.0-01</version>
+                  </dependency>
+              </dependencies>
+          </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>2.12.1</version>
+              <configuration>
+                  <includes>
+                      <include>**/*Tests.java</include>
+                  </includes>
+                  <excludes>
+                      <exclude>**/Abstract*.java</exclude>
+                  </excludes>
+              </configuration>
+          </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-jar-plugin</artifactId>
+              <version>2.4</version>
+              <configuration>
+                  <archive>
+                      <manifest>
+                          <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                      </manifest>
+                  </archive>
+              </configuration>
+          </plugin>
+
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-release-plugin</artifactId>
+              <configuration>
+                  <mavenExecutorId>forked-path</mavenExecutorId>
+                  <useReleaseProfile>false</useReleaseProfile>
+                  <arguments>-Psonatype-oss-release</arguments>
+              </configuration>
+          </plugin>
+          
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.8.1</version>
+          </plugin>
              
         </plugins>
     </build>
  
     <dependencies>
 
-        <dependency>
-            <groupId>org.jasig.cas</groupId>
-            <artifactId>cas-server-core</artifactId>
-            <version>${cas.version}</version>
-        </dependency>
+      <dependency>
+          <groupId>org.jasig.cas</groupId>
+          <artifactId>cas-server-core</artifactId>
+          <version>${cas.version}</version>
+      </dependency>
 
-		<dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-               
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>${commons-codec.version}</version>
-        </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>${jackson.version}</version>
+      </dependency>
+             
+      <dependency>
+          <groupId>commons-codec</groupId>
+          <artifactId>commons-codec</artifactId>
+          <version>${commons-codec.version}</version>
+      </dependency>
 
-        <dependency>
-            <groupId>org.jasig.service</groupId>
-            <artifactId>person-directory-impl</artifactId>
-            <version>${person.directory.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+      <dependency>
+          <groupId>org.jasig.service</groupId>
+          <artifactId>person-directory-impl</artifactId>
+          <version>${person.directory.version}</version>
+          <exclusions>
+              <exclusion>
+                  <groupId>commons-logging</groupId>
+                  <artifactId>commons-logging</artifactId>
+              </exclusion>
+          </exclusions>
+      </dependency>
 
-        <dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-core</artifactId>
-            <version>${shiro.version}</version>
-        </dependency>
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-core</artifactId>
+          <version>${shiro.version}</version>
+      </dependency>
 
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>${servlet.version}</version>
-            <scope>provided</scope>
-        </dependency>
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>servlet-api</artifactId>
+          <version>${servlet.version}</version>
+          <scope>provided</scope>
+      </dependency>
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>${junit.version}</version>
+          <scope>test</scope>
+      </dependency>
 
-        <dependency>
-        	<groupId>org.jasig.cas.client</groupId>
-        	<artifactId>cas-client-core</artifactId>
-        	<version>${cas.client.version}</version>
-        </dependency>
-        
-		<dependency>
-		    <groupId>com.sun.jersey</groupId>
-		    <artifactId>jersey-client</artifactId>
-		    <version>1.12</version>
-		</dependency>
-        
+      <dependency>
+        <groupId>org.jasig.cas.client</groupId>
+        <artifactId>cas-client-core</artifactId>
+        <version>${cas.client.version}</version>
+      </dependency>
+      
+      <dependency>
+          <groupId>com.sun.jersey</groupId>
+          <artifactId>jersey-client</artifactId>
+          <version>1.12</version>
+      </dependency>
 
-
-	 	<dependency>
+      <dependency>
 	      <groupId>org.slf4j</groupId>
 	      <artifactId>slf4j-api</artifactId>
 	      <version>${slf4j.version}</version>
