--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <person.directory.version>1.5.0-RC6</person.directory.version>
         <shiro.version>1.2.1</shiro.version>
         <slf4j.version>1.6.6</slf4j.version>
+        <grouper.client.version>2.1.0</grouper.client.version>
     </properties>
  
     <reporting>
@@ -241,6 +242,18 @@
           </exclusions>
       </dependency>
 
+        <dependency>
+            <groupId>org.jasig.service</groupId>
+            <artifactId>person-directory-api</artifactId>
+            <version>${person.directory.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
       <dependency>
           <groupId>org.apache.shiro</groupId>
           <artifactId>shiro-core</artifactId>
@@ -266,6 +279,13 @@
         <artifactId>cas-client-core</artifactId>
         <version>${cas.client.version}</version>
       </dependency>
+
+        <dependency>
+            <groupId>edu.internet2.middleware.grouper</groupId>
+            <artifactId>grouperClient</artifactId>
+            <version>${grouper.client.version}</version>
+            <scope>compile</scope>
+        </dependency>
       
       <dependency>
           <groupId>com.sun.jersey</groupId>
