--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
         <shiro.version>1.2.1</shiro.version>
         <slf4j.version>1.6.6</slf4j.version>
         <grouper.client.version>2.1.0</grouper.client.version>
-        <spock.version>0.7-groovy-2.0-SNAPSHOT</spock.version>
+        <!-- <spock.version>0.7-groovy-2.0-SNAPSHOT</spock.version> -->
     </properties>
 
     <reporting>
@@ -317,12 +317,13 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
+        <!-- Disable until spock version compatible with Groovy 2.x gets released -->
+        <!-- <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-core</artifactId>
             <version>${spock.version}</version>
             <scope>test</scope>
-        </dependency>
+        </dependency> -->
 
     </dependencies>
 
