--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <shiro.version>1.2.1</shiro.version>
         <slf4j.version>1.6.6</slf4j.version>
         <grouper.client.version>2.1.0</grouper.client.version>
+        <stormpath.sdk.version>0.4.1</stormpath.sdk.version>
         <!-- <spock.version>0.7-groovy-2.0-SNAPSHOT</spock.version> -->
     </properties>
 
@@ -305,6 +306,19 @@
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
             <version>${slf4j.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.stormpath.sdk</groupId>
+            <artifactId>stormpath-sdk-api</artifactId>
+            <version>${stormpath.sdk.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.stormpath.sdk</groupId>
+            <artifactId>stormpath-sdk-httpclient</artifactId>
+            <version>${stormpath.sdk.version}</version>
             <scope>runtime</scope>
         </dependency>
 
