--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <description>A collection of useful Jasig CAS SSO Server add-ons and extensions.</description>
     <groupId>net.unicon.cas</groupId>
     <artifactId>cas-addons</artifactId>
-    <version>1.0-RC1-SNAPSHOT</version>
+    <version>1.0-M2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
     <inceptionYear>2012</inceptionYear>
@@ -157,7 +157,7 @@
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
                     <compilerId>groovy-eclipse-compiler</compilerId>
-                    <verbose>true</verbose>
+                    <verbose>false</verbose>
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -207,6 +207,29 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.8.1</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>aspectj-maven-plugin</artifactId>
+                <version>1.3.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <weaveDependencies>
+                        <weaveDependency>
+                            <groupId>org.jasig.cas</groupId>
+                            <artifactId>cas-server-core</artifactId>
+                        </weaveDependency>
+                    </weaveDependencies>
+                </configuration>
             </plugin>
 
         </plugins>
